--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="app">
-      <a href="https://github.com/xugum"><img src="xg1logo.png" /></a>
+      <a href="https://github.com/xugum/" target="_blank"><img src="xg1logo.png" /></a>
     </div>
   </body>
 </html>
